linked css file to html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tribute Page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <main id="main">
   <h1>Dr. Norman Borlaug</h1>
   <p id="man">The man who saved a billion lives</p>
-</head>
   <figure>
   <img src=https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg alt="Dr. Norman with some men" id="img">
   <figcaption>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
@@ -9,7 +17,7 @@
   <h3>Here's a time line of Dr. Borlaug's life:</h3>
   <ul id="tribute-info">
     <li><b>1914</b> - Born in Cresco, Iowa</li>
-    <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+    <li><b>1933</b> -   Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
     <li><b>1935</b> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
     <li><b>1937</b> - Finishes university and takes a job in the US Forestry Service</li>
     <li><b>1938</b> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>
@@ -33,3 +41,5 @@
 
 <footer><b>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlau" id="tribute-link" target="_blank">Wikipedia entry.</b></footer>
 </main>
+</body>
+</html>
