fix footer css selector

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p>-- Indian Prime Minister Manmohan Singh</em></p>
     </blockquote>
     <footer>
-      <strong>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlau" id="tribute-link" target="_blank">Wikipedia entry.</strong>
+      <p class="footer"><strong>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlau" id="tribute-link" target="_blank">Wikipedia entry.</strong></p>
     </footer>
   </body>
 </html>
